tried to fix favicon thing on mobile

--- a/src/styles/layout/_calendar.scss
+++ b/src/styles/layout/_calendar.scss
@@ -2,7 +2,7 @@
 @import "../abstracts/mixins";
 
 .calendar {
-  flex: 1;
+  flex: 0 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
